# CAOS_FragmentIQ

./: .gitignore  ATTRIBUTION.md  CHANGELOG.md  LICENSES.md  README.md  STRUCTURE.md  pyproject.toml
.github/workflows/: ci.yml  deploy-pages.yml
data/: README.md
data-pipeline/: README.md  requirements-precompute.txt  requirements.txt
data-pipeline/fqlab/: __init__.py  live.py  pipeline.py  registry.py
data-pipeline/fqlab/cases/: frag_cases.py
data-pipeline/fqlab/core/: gate.py  manifest.py  trace.py
data-pipeline/fqlab/io/: contract.py  schema.py
data/derived/: case-results.json  fines.onnx  fq-learned.json  frag-edge.onnx
data/examples/: scenes.csv
deploy/: pages.md
docs/: README.md  architecture.md  cases.md  frameworks.md  guides.md
docs/architecture/: 01_overview.md  02_determinism-and-trace.md  03_the-gate.md  04_live-lane-pyodide.md  04_live-lane.md  05_precompute-pipeline.md  06_model-evaluation.md  07_deploy.md  08_data-contracts.md
docs/cases/: README.md
docs/frameworks/: 01_pipeline.md  02_viz.md  03_torch-onnx.md
docs/guides/: 00_instantiate.md  01_precompute-pipeline.md  02_bring-your-own-data.md  05_real-sample-lane.md
frontend/: copy-data.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: CNAME
frontend/src/: architecture.ts  fragmentiq.css  main.tsx
frontend/test/: contract.test.ts  frag.test.ts  real-methods.test.ts
scripts/: precompute.ps1  precompute.sh
tests/: conftest.py  test_contract.py  test_manifest.py  test_pipeline_smoke.py  test_tune_test_split.py
(+63 files in other folders)
