# FragmentIQ — the offline engine package (ADR-0057, instantiated from the product-repo archetype).
# The EXAMPLE engine is numpy-only on purpose (an instantly-installable, no-hang reference); a real product pins
# its research-chosen SOTA engines in data-pipeline/requirements.txt and documents them in docs/frameworks/.
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fqlab"
# PEP 440 form of the display version X.XX.XXX (see CHANGELOG.md + fqlab.__version__).
version = "0.7.0"
description = "FragmentIQ — muckpile fragmentation: instance-segmented particle-size distribution + Rosin-Rammler fit (ADR-0057)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Felipe Santibáñez-Leal" }]
dependencies = ["numpy>=1.26"]

[tool.setuptools.packages.find]
where = ["data-pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
# allow short index names (i, j, x, y) in the image/grid loops — intentional domain notation.
ignore = ["E741"]
